Fixed encl0 not showing up Fixed rhinos not being setup Added a min-height to infomenus.

--- a/demos/FMP/style.css
+++ b/demos/FMP/style.css
@@ -386,7 +386,8 @@ svg{
 	border: 0;
 	padding:0;
 	width: 40vw;
-	padding-bottom: 3px;
+	padding-bottom: 1px;
+	min-height: 2.8rem;
 
 	background-color: white;
 	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
@@ -395,7 +396,7 @@ svg{
 }
 
 .rhinoProblem{
-	margin-top:3px;
+	margin-top:1px;
 	width:31%;
 	-webkit-filter: drop-shadow(2.5px 2.5px 2.5px rgba(0,0,0,0.4));
 	filter: drop-shadow(2.5px 2.5px 2.5px rgba(0,0,0,0.4));
